--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
-  python:
-    image: python:latest
+  server:
+    image: python:3
     ports:
       - 80:80
     tty: true
@@ -10,4 +10,9 @@ services:
       - ./:/usr/src/app
     env_file:
       - .env
-    command: bash
+    command: bash -c "
+        pip install --upgrade pip &&
+        pip install -r requirements.txt &&
+        python manage.py migrate &&
+        python manage.py runserver 0.0.0.0:80
+      "
